Update the OSCAR configuration file template: now by default we try to insttall prereqs if needed.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6887 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 52b6cdd44b4965e3034490607c03e99c1cbe2926

--- a/share/oscar.conf
+++ b/share/oscar.conf
@@ -11,7 +11,7 @@ ODA_TYPE = file
 #     user and exit,
 #   - 'check_and_fix', if a prereq is not in the expected status, we try to fix
 #     it.
-PREREQ_MODE = check_only
+PREREQ_MODE = check_and_fix
 
 ################################################################################
 # Location of the different OSCAR components                                   #
