[OSCARonDebian] Fixes dependences issues with the Debian packages for OSCAR.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6937 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 68eee9ad2c7e342d859a5502633a298e9b66c8b3

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.7.2.2
 
 Package: oscar
 Architecture: all
-Depends: c-shell | tcsh, liboscar, libqt-perl, oscar-bin, perl
+Depends: c-shell | tcsh, liboscar, oscar-bin
 Description: Open Source Cluster Application Resources
  OSCAR (Open Source Cluster Application Resources) is a snapshot of the best 
  known methods for building, programming, and using High Performance Computing
@@ -19,30 +19,25 @@ Description: Open Source Cluster Application Resources
 
 Package: oscar-bin
 Architecture: all
-Depends: perl
 Description: Binaries for OSCAR
  Set of binaries for OSCAR
 
 Package: liboscar
 Architecture: all
-Depends: perl
 Description: Libraries for OSCAR 
  Set of libraries for OSCAR
 
 Package: oscar-base-server
 Architecture: all
-Depends: perl, libqt-perl
 Description: Transitional package for OSCAR (server side)
  This is a transitional package for OSCAR (server side).
 
 Package: oscar-base
 Architecture: all
-Depends: perl, libqt-perl
 Description: Transitional package for OSCAR (API side)
  This is a transitional package for OSCAR (API side).
 
 Package: oscar-base-client
 Architecture: all
-Depends: perl, libqt-perl
 Description: Transitional package for OSCAR (client side)
  This is a transitional package for OSCAR (client side).
