+ Finishes the code for image creation when using flat file based ODA. + Better error handling.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6947 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f397b5a4fd25ae609edd5f50745f07847ef4b853

--- a/share/oscar.conf
+++ b/share/oscar.conf
@@ -34,3 +34,8 @@ RAPT_PATH = packages/rapt
 # Specify where yume is
 YUME_PATH = packages/yume
 
+# Specify where OSCAR packages are located. This is only used by developers
+OPKGS_PATH = packages
+
+# Specify where the flat file ODA configuration file are
+PATH_ODA_CONFIG_FILES = /etc/oscar/clusters
