Update prereqs data for Ubuntu.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7046 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: bd224c12cb8df57b15bc69248bc6bd6e88c92bdb

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -124,7 +124,7 @@ perl-libwww-perl
 sh: $OSCAR_HOME/scripts/system-sanity
 xmlstarlet
 
-[debian:4:*]
+[debian|ubuntu:*:*]
 !tftpd
 apache2
 dhcp3-server
