Port branch-5-1 modifications into trunk.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7146 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 010c7d8e51dca010b7047255e547168f77652d28

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -83,6 +83,14 @@ Scripts for OSCAR clustering base package.
 
 %files
 %defattr(-,root,root)
+%dir %{basedir}/
+%dir %{basedir}/doc/
+%dir %{basedir}/images/
+%dir %{basedir}/oscarsamples/
+%dir %{basedir}/packages/
+%dir %{basedir}/share/
+%dir %{basedir}/testing/
+%dir %{basedir}/tmp/
 %{basedir}/COPYING
 %{basedir}/CREDITS
 %{basedir}/README
@@ -91,6 +99,7 @@ Scripts for OSCAR clustering base package.
 %{basedir}/images/*
 %{basedir}/install_cluster
 %{basedir}/oscarsamples/*
+%{basedir}/packages/*
 %{basedir}/share/*
 %{basedir}/testing/*
 %{basedir}/tmp/
@@ -103,12 +112,17 @@ Scripts for OSCAR clustering base package.
 
 %files libs
 %defattr(-,root,root)
+%dir %{basedir}/lib/
 %{basedir}/lib/*
 
 %files scripts
 %defattr(-,root,root)
+%dir %{basedir}/scripts/
 %{basedir}/scripts/*
 
 %changelog
+* Thu Nov 29 2007 Bernard Li <bernard@vanhpc.org>
+- Added directories to the %files sections so that they will be removed
+  when the RPMs are uninstalled
 * Thu Oct 4 2007 Erich Focht
 - Initial package.
