Update Debian packages for OSCAR base.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7203 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fa8272e93b956eb0d827cb6b02ae453e1bc4307f

--- a/debian/rules
+++ b/debian/rules
@@ -101,6 +101,7 @@ install: build
 	# To address bootstraping issue, we treat rapt and yume as prereqs
 	mv packages/yume/ $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
 	mv packages/rapt/ $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
+	mv packages/oda   $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
 	# We remove stuff we do not yet know how to deal with
 	rm -rf $(CURDIR)/debian/oscar/usr/share/oscar/Makefile.am
 	rm -rf $(CURDIR)/debian/oscar/usr/share/oscar/Makefile.in
