--- a/debian/control
+++ b/debian/control
@@ -34,6 +34,7 @@ Description: Transitional package for OSCAR (server side)
 
 Package: oscar-base
 Architecture: all
+Depends: libappconfig-perl
 Description: Transitional package for OSCAR (API side)
  This is a transitional package for OSCAR (API side).
 
