Include the Ubuntu support.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7209 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 1caaacc59e18562da4622ca34f598ecc1b538f12

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -124,7 +124,7 @@ perl-libwww-perl
 sh: $OSCAR_HOME/scripts/system-sanity
 xmlstarlet
 
-[debian|ubuntu:*:*]
+[debian:*:*]
 !tftpd
 apache2
 dhcp3-server
@@ -135,6 +135,25 @@ libmldbm-perl
 libxml-simple-perl
 perl-tk
 mysql-server-4.1
+mysql-common
+nfs-kernel-server
+debootstrap
+tcpdump
+xinetd
+xmlstarlet
+sh: $OSCAR_HOME/scripts/system-sanity
+
+[ubuntu:*:*]
+!tftpd
+apache2
+dhcp3-server
+dpkg-dev
+libdbi-perl
+libdbd-mysql-perl
+libmldbm-perl
+libxml-simple-perl
+perl-tk
+mysql-server-5.0
 mysql-common
 nfs-kernel-server
 debootstrap
