Update Debian related file for the creation of a new set of packages for OSCAR.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7236 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: c2e1db783b240459a3f098d48fd02de3417e8592

--- a/debian/rules
+++ b/debian/rules
@@ -99,9 +99,9 @@ install: build
 	mv $(CURDIR)/share/* \
 		$(CURDIR)/debian/oscar/usr/share/oscar
 	# To address bootstraping issue, we treat rapt and yume as prereqs
-	mv packages/yume/ $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
-	mv packages/rapt/ $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
-	mv packages/oda   $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
+	mv packages/yume/   $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
+	mv packages/rapt/   $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
+	cp -rf packages/oda $(CURDIR)/debian/oscar/usr/share/oscar/prereqs/
 	# We remove stuff we do not yet know how to deal with
 	rm -rf $(CURDIR)/debian/oscar/usr/share/oscar/Makefile.am
 	rm -rf $(CURDIR)/debian/oscar/usr/share/oscar/Makefile.in
