Update the Makefile for OSCAR perl modules.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7246 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 6b9da6c8431fc2d360b6d81234e1cd3fc3677cd6

--- a/lib/OSCAR/ODA/Makefile
+++ b/lib/OSCAR/ODA/Makefile
@@ -1,18 +1,17 @@
 DESTDIR=
-
-include ./Config.mk
-
-SUBDIRS := ODA OCA
+TOP_LIB_DIR = ..
+include $(TOP_LIB_DIR)/Config.mk
+SUBDIRS := 
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
-	@echo Creating $(DESTDIR)$(LIBDIR)/OSCAR
-	@mkdir -p $(DESTDIR)$(LIBDIR)/OSCAR
-	cp *.pm $(DESTDIR)$(LIBDIR)/OSCAR
+	@echo Creating $(DESTDIR)$(LIBDIR)/OSCAR/ODA
+	@mkdir -p $(DESTDIR)$(LIBDIR)/OSCAR/ODA
+	cp *.pm $(DESTDIR)$(LIBDIR)/OSCAR/ODA
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
-	rm -rf $(DESTDIR)$(LIBDIR)/OSCAR/*.pm
+	rm -rf $(DESTDIR)$(LIBDIR)/OSCAR/ODA/*.pm
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
