Fixes a problem with the OS_Settings Makefile.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7249 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 1dbc10e59f273f78d610a79e85cfcef2d390d475

--- a/lib/OSCAR/OCA/OS_Settings/Makefile
+++ b/lib/OSCAR/OCA/OS_Settings/Makefile
@@ -3,6 +3,7 @@ TOP_LIB_DIR = ../..
 include $(TOP_LIB_DIR)/Config.mk
 
 SUBDIRS := 
+FILES := default debian fedora7 suse
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
@@ -10,7 +11,7 @@ all:
 install:
 	@echo Creating $(DESTDIR)$(LIBDIR)/OSCAR/OCA/OS_Settings
 	@mkdir -p $(DESTDIR)$(LIBDIR)/OSCAR/OCA/OS_Settings
-	cp *.pm $(DESTDIR)$(LIBDIR)/OSCAR/OCA/OS_Settings
+	cp ${FILES} $(DESTDIR)$(LIBDIR)/OSCAR/OCA/OS_Settings
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
