Update prereq config file for ODA.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7262 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 744845f6766ff7ade3ce6cc0b3a2a8f0f851db7d

--- a/packages/oda/prereqs/mysql.cfg
+++ b/packages/oda/prereqs/mysql.cfg
@@ -35,7 +35,7 @@ perl-DBD-mysql
 perl-DBI
 perl-Data-ShowTable
 
-[debian:*:*]
+[debian|ubuntu:*:*]
 libdbi-perl
 
 # differences between mandr* distros should be resolved automatically
