This check-in fixes #493 - ODA is now separated from the rest of the code and shipped via a separate binary package. Based on that, we were able to implement a clean and well-defined bootstrapping mechanism for ODA.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7271 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f629ef2cae45213d077adc1346b6e435f2b019a2

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -2,7 +2,7 @@ DESTDIR=
 
 include ./Config.mk
 
-SUBDIRS := ODA OCA
+SUBDIRS := OCA
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
