Sligthly improve the makefile for Perl modules.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7272 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 6a0b274709e0148fb79f6274b353f991ff3cbc03

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -4,15 +4,27 @@ include ./Config.mk
 
 SUBDIRS := OCA
 
+FILES := AddNode.pm Help.pm opd2.pm Prereqs.pm Bootstrap.pm ImageMgt.pm \
+         OpkgDB.pm psm.pm Logger.pm Opkg.pm ClientMgt.pm LSBreleaseParser.pm \
+         PxegrubConfigManager.pm CLI_MAC.pm MACops.pm osm.pm pxegrub.pm \
+         CmpVersions.pm MAC.pm PackageBest.pm SISBuildSetup.pm Configbox.pm \
+         PackageInUn.pm ConfigFile.pm PackagePath.pm SwitcherAPI.pm \
+         ConfigManager.pm msm.pm SystemSanity.pm Package.pm Tk.pm \
+		 Configurator.pm Network.pm PackageSet.pm Utils.pm DelNode.pm \
+         NextIp.pm VersionParser.pm Distro.pm NodeConfigManager.pm \
+         PackageSmart.pm VMConfigManager.pm Env.pm NodeMgt.pm \
+         PartitionConfigManager.pm  WizardEnv.pm FileUtils.pm OCA.pm \
+         PartitionMgt.pm
+
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
 	@echo Creating $(DESTDIR)$(LIBDIR)/OSCAR
-	@mkdir -p $(DESTDIR)$(LIBDIR)/OSCAR
-	cp *.pm $(DESTDIR)$(LIBDIR)/OSCAR
+	install -d -m 0755 $(DESTDIR)$(LIBDIR)/OSCAR
+	install    -m 0755 ${FILES} $(DESTDIR)$(LIBDIR)/OSCAR
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
-	rm -rf $(DESTDIR)$(LIBDIR)/OSCAR/*.pm
+	cd $(DESTDIR)$(LIBDIR)/OSCAR; rm -rf ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
