Update the bootstrapping mechanism in order to include the new ODA initialization mechanism.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7273 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4fa60fded165bd49b241d5fbc7a50cde17c0445c

--- a/debian/rules
+++ b/debian/rules
@@ -80,6 +80,7 @@ install: build
 #	mkdir -p $(CURDIR)/debian/oscar/opt/oscar
 	rm -f `find $(CURDIR) -name "*.deb"`
 	rm -f `find $(CURDIR) -name "*.rpm"`
+	rm -f $(CURDIR)/lib/OSCAR/oda.pm
 	mv $(CURDIR)/COPYING \
 		$(CURDIR)/debian/oscar/usr/share/doc/oscar
 	mv $(CURDIR)/README \
