Cut new Debian packages based on trunk.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7302 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 58bc140fd08def331fa9b3ce707c0910df70f4b7

--- a/debian/rules
+++ b/debian/rules
@@ -118,8 +118,7 @@ install: build
 
 	# Prepare the liboscar package
 	mkdir -p $(CURDIR)/debian/liboscar/usr/lib/perl5
-	mv $(CURDIR)/lib/* \
-	    $(CURDIR)/debian/liboscar/usr/lib/perl5
+	cd $(CURDIR)/lib/*; make install DESTDIR=$(CURDIR)/debian/liboscar/
 
 	# Prepare the oscar-bin package
 	mkdir -p $(CURDIR)/debian/oscar-bin/usr/local/bin
