--- a/lib/OSCAR/OCA/Makefile
+++ b/lib/OSCAR/OCA/Makefile
@@ -1,5 +1,5 @@
 DESTDIR=
-TOP_LIB_DIR = ..
+TOP_LIB_DIR = ../..
 include $(TOP_LIB_DIR)/Config.mk
 
 SUBDIRS := OS_Detect OS_Settings RM_Detect Sanity_Check
