Create a new set of Debian packages for OSCAR + fix issues with Debian packages building + simplify the Debian rules file.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7307 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2af2052449ddd03b26b3562baba2669caab6a2ca

--- a/debian/rules
+++ b/debian/rules
@@ -81,6 +81,8 @@ install: build
 	rm -f `find $(CURDIR) -name "*.deb"`
 	rm -f `find $(CURDIR) -name "*.rpm"`
 	rm -f $(CURDIR)/lib/OSCAR/oda.pm
+    # We remove the crappy top-level Makefile (it can only screw up he install
+	rm -f $(CURDIR)/debian/oscar/Makefile
 	mv $(CURDIR)/COPYING \
 		$(CURDIR)/debian/oscar/usr/share/doc/oscar
 	mv $(CURDIR)/README \
@@ -118,15 +120,15 @@ install: build
 
 	# Prepare the liboscar package
 	mkdir -p $(CURDIR)/debian/liboscar/usr/lib/perl5
-	cd $(CURDIR)/lib/*; make install DESTDIR=$(CURDIR)/debian/liboscar/
+	cd $(CURDIR)/lib; make install DESTDIR=$(CURDIR)/debian/liboscar/
 
 	# Prepare the oscar-bin package
 	mkdir -p $(CURDIR)/debian/oscar-bin/usr/local/bin
 	mv $(CURDIR)/scripts/system-sanity.d \
 		$(CURDIR)/debian/oscar-bin/usr/local/bin
 	cd  $(CURDIR)/scripts; perl Makefile.PL; make install DESTDIR=$(CURDIR)/debian/oscar-bin
-	mv $(CURDIR)/install_cluster \
-		$(CURDIR)/debian/oscar-bin/usr/bin
+	# mv $(CURDIR)/install_cluster \
+	#	$(CURDIR)/debian/oscar-bin/usr/bin
 
 	# Prepare the "oscar-base" package
 	mkdir -p $(CURDIR)/debian/oscar-base
