Fix a problem with Debian packages for oscar core.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7314 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7514761f8e8c6793d717ff7f32d0ecdbdb506c93

--- a/debian/rules
+++ b/debian/rules
@@ -126,7 +126,11 @@ install: build
 	mkdir -p $(CURDIR)/debian/oscar-bin/usr/local/bin
 	mv $(CURDIR)/scripts/system-sanity.d \
 		$(CURDIR)/debian/oscar-bin/usr/local/bin
-	cd  $(CURDIR)/scripts; perl Makefile.PL; make install DESTDIR=$(CURDIR)/debian/oscar-bin
+	# We make sure to clean everything up, it order to not deal with old stuff
+	cd  $(CURDIR)/scripts; perl Makefile.PL; make clean;
+	# Then we install the binaries
+	cd  $(CURDIR)/scripts; perl Makefile.PL; \
+		make install DESTDIR=$(CURDIR)/debian/oscar-bin
 	# mv $(CURDIR)/install_cluster \
 	#	$(CURDIR)/debian/oscar-bin/usr/bin
 
