Add Makefiles for the installation of prereqs directly on the system.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7317 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 68c6010a9d2473cbc2cb1c7409415650e6e5170e

--- a/share/Makefile
+++ b/share/Makefile
@@ -1,5 +1,10 @@
 CONFIGDIR=etc/oscar
 
+SUBDIRS := prereqs
+
+all:
+	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
+
 install:
 	install -d -m 0755 $(DESTDIR)/$(CONFIGDIR)
 	install -d -m 0755 $(DESTDIR)/$(CONFIGDIR)/templates
@@ -7,7 +12,13 @@ install:
 	install    -m 0755 etc/supported_distros.txt $(DESTDIR)/$(CONFIGDIR)
 	install    -m 0755 etc/core.conf $(DESTDIR)/$(CONFIGDIR)/opkgs
 	install    -m 0755 etc/templates/oscar.conf $(DESTDIR)/$(CONFIGDIR)/templates
+	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
 	rm -f $(DESTDIR)/$(CONFIGDIR)/supported_distros.txt
 	rm -f $(DESTDIR)/$(CONFIGDIR)/templates/oscar.conf
+	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
+
+clean:
+	rm -f *~
+	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} clean ) ; done
