Create new Debian packages for OSCAR core.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7323 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e6ffb0d8a8bce0f494f55396b45c6e3c40be8821

--- a/debian/rules
+++ b/debian/rules
@@ -99,9 +99,9 @@ install: build
 		$(CURDIR)/debian/oscar/opt/oscar
 	cp debian/etc/oscar.conf $(CURDIR)/debian/oscar/etc/oscar/
 
-	########################
-	# Install the prereqs. #
-	########################
+	###############################################
+	# Install the prereqs in the "oscar" package. #
+	###############################################
 
 	# To address bootstraping issue, we treat rapt and yume as prereqs
 	cd share; $(MAKE) install DESTDIR=$(CURDIR)/debian/oscar/
