Add makefiles for the install of the Tk perl modules.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7324 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4b22689226ff375adb45488c75014a49a5f36d24

--- a/lib/Tk/HTML/Makefile
+++ b/lib/Tk/HTML/Makefile
@@ -1,17 +1,21 @@
 DESTDIR=
 
-TOPDIR = .
+TOPDIR = ../..
 include $(TOPDIR)/Config.mk
 
-SUBDIRS := OSCAR Qt Tk
+SUBDIRS := 
 
-FILES := 
+FILES := Form.pm Handler.pm IO.pm
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
+	@echo Creating $(DESTDIR)$(LIBDIR)/Tk/HTML
+	install -d -m 0755 $(DESTDIR)$(LIBDIR)/Tk/HTML
+	install    -m 0755 ${FILES} $(DESTDIR)$(LIBDIR)/Tk/HTML
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
+	cd $(DESTDIR)$(LIBDIR)/Tk/HTML; rm -rf ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
