--- a/lib/Tk/Makefile
+++ b/lib/Tk/Makefile
@@ -1,17 +1,21 @@
 DESTDIR=
 
-TOPDIR = .
+TOPDIR = ..
 include $(TOPDIR)/Config.mk
 
-SUBDIRS := OSCAR Qt Tk
+SUBDIRS := HTML
 
-FILES := 
+FILES := HTML.pm Web.pm
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
+	@echo Creating $(DESTDIR)$(LIBDIR)/Tk
+	install -d -m 0755 $(DESTDIR)$(LIBDIR)/Tk
+	install    -m 0755 ${FILES} $(DESTDIR)$(LIBDIR)/Tk
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
+	cd $(DESTDIR)$(LIBDIR)/Tk; rm -rf ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
