Minor update to a Makefile (include a make clean command).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7327 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 1493a346e008167383de91cc57a93359082a0874

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -29,3 +29,6 @@ install:
 uninstall:
 	cd $(DESTDIR)$(LIBDIR)/OSCAR; rm -rf ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
+
+clean:
+	rm -f *~
