Update Makefile for the installation of the definition of package sets directly in the system.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7328 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4df659ceb73368b4c9919598f103ca49485a7f81

--- a/share/Makefile
+++ b/share/Makefile
@@ -1,6 +1,6 @@
 CONFIGDIR=etc/oscar
 
-SUBDIRS := prereqs
+SUBDIRS := prereqs package_sets
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
