[Prereqs] Add a prereq for ORM.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7353 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2eea2acdf5644491c98c35519ebce184bdbaa4ad

--- a/share/prereqs/ORM/Makefile
+++ b/share/prereqs/ORM/Makefile
@@ -1,20 +1,20 @@
+DESTDIR=
 SHAREDIR=usr/share/oscar/prereqs
+PREREQNAME=ORM
 
-SUBDIRS := AppConfig packman perl-Qt perl-XML-Parser base \
-			OSCAR-Database perl-HTML-Tree perl-Tk perl-XML-Simple ORM
-
-FILES := prereqs.order
+SUBDIRS := 
+FILES := prereq.cfg
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
-	install -d -m 0755 $(DESTDIR)/$(SHAREDIR)
-	install    -m 0755 ${FILES} $(DESTDIR)/$(SHAREDIR)
+	install -d -m 0755 $(DESTDIR)/$(SHAREDIR)/$(PREREQNAME)
+	install    -m 0755 ${FILES} $(DESTDIR)/$(SHAREDIR)/$(PREREQNAME)
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
-	cd $(DESTDIR)/$(SHAREDIR); rm -f ${FILES}
+	cd $(DESTDIR)/$(SHAREDIR)/$(PREREQNAME); rm -f ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
 
 clean:
