Improve oscar basic Debian packages.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7355 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fea765a95fcbd8bd1bd4fd8f74fbb79f4eaeaf29

--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Description: Transitional package for OSCAR (server side)
 
 Package: oscar-base
 Architecture: all
-Depends: libappconfig-perl
+Depends: libappconfig-perl, oscar-bin, liboscar, oscar
 Description: Transitional package for OSCAR (API side)
  This is a transitional package for OSCAR (API side).
 
