Fixes a problem with the Makefile for Perl modules in lib/OSCAR (opd2.pm is not there anymore).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7371 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: a113ca2524c5b249c7d7334f0443d2faf9d6fff9

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -5,7 +5,7 @@ include $(TOPDIR)/Config.mk
 
 SUBDIRS := OCA
 
-FILES := AddNode.pm Help.pm opd2.pm Prereqs.pm Bootstrap.pm ImageMgt.pm \
+FILES := AddNode.pm Help.pm Prereqs.pm Bootstrap.pm ImageMgt.pm \
          OpkgDB.pm psm.pm Logger.pm Opkg.pm ClientMgt.pm LSBreleaseParser.pm \
          PxegrubConfigManager.pm CLI_MAC.pm MACops.pm osm.pm pxegrub.pm \
          CmpVersions.pm MAC.pm PackageBest.pm SISBuildSetup.pm Configbox.pm \
