Minor update the lib/Qt/Makefile file: add a clean target.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7381 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ff9a68a6c847e427c9edf23b251793774d2a6730

--- a/lib/Qt/Makefile
+++ b/lib/Qt/Makefile
@@ -23,3 +23,6 @@ install:
 uninstall:
 	cd $(DESTDIR)$(LIBDIR)/Qt; rm -rf ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
+
+clean:
+	rm -f *~
