Update the Makefile in lib/Qt since Selector is now shipped via a separated package.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7392 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: c7336503ca6fb14edba5fe2e943475cb99a1de5a

--- a/lib/Qt/Makefile
+++ b/lib/Qt/Makefile
@@ -5,11 +5,8 @@ include $(TOPDIR)/Config.mk
 
 SUBDIRS := 
 
-FILES := SelectorAbout.pm OpderAbout.pm SelectorCheckTableItem.pm \
-		 OpderAddRepository.pm SelectorImages.pm OpderDownloadInfo.pm \
-		 SelectorManageSets.pm OpderDownloadPackage.pm Selector.pl \
-		 OpderImages.pm SelectorTableItem.pm Opder.pl SelectorTable.pm \
-		 OpderTable.pm SelectorUtils.pm
+FILES := OpderAbout.pm OpderAddRepository.pm OpderDownloadInfo.pm \
+		 OpderDownloadPackage.pm OpderImages.pm Opder.pl OpderTable.pm
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
