Slightly improve the Makefile for the RM_Detect framework.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7418 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 932261c0c37e54cc35c6413092300c3949ae2914

--- a/lib/OSCAR/OCA/RM_Detect/Makefile
+++ b/lib/OSCAR/OCA/RM_Detect/Makefile
@@ -3,16 +3,20 @@ TOP_LIB_DIR = ../../..
 include $(TOP_LIB_DIR)/Config.mk
 
 SUBDIRS := 
+FILES := None.pm
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
 	@echo Creating $(DESTDIR)$(LIBDIR)/OSCAR/OCA/RM_Detect
-	@mkdir -p $(DESTDIR)$(LIBDIR)/OSCAR/OCA/RM_Detect
-	cp *.pm $(DESTDIR)$(LIBDIR)/OSCAR/OCA/RM_Detect
+	install -d -m 0755 $(DESTDIR)$(LIBDIR)/OSCAR/OCA/RM_Detect
+	install    -m 0755 ${FILES} $(DESTDIR)$(LIBDIR)/OSCAR/OCA/RM_Detect
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
 	rm -rf $(DESTDIR)$(LIBDIR)/OSCAR/OCA/RM_Detect/*.pm
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
+
+clean:
+	rm -f *~
