--- a/share/etc/templates/oscar.conf
+++ b/share/etc/templates/oscar.conf
@@ -3,7 +3,7 @@ OSCAR_NETWORK_INTERFACE = eth0
 # ODA_TYPE specifies the type of database that have to be used for ODA. The two
 # options are 'file' where ODA uses as flat text file, or 'db' where ODA uses
 # a real database (i.e. mysql).
-ODA_TYPE = file
+ODA_TYPE = db
 
 # PREREQ_MODE specifies the operation mode associated to the prereqs management.
 # Two modes are possible:
