[Sanity_Check framework] Update the Makefile.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7489 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 8d777fd360d7a7c1422ad0e36e1312891a4997a2

--- a/lib/OSCAR/OCA/Sanity_Check/Makefile
+++ b/lib/OSCAR/OCA/Sanity_Check/Makefile
@@ -2,6 +2,7 @@ DESTDIR=
 TOP_LIB_DIR = ../../..
 include $(TOP_LIB_DIR)/Config.mk
 
+FILES := Images.pm OPKG.pm Prereqs.pm
 SUBDIRS := 
 
 all:
@@ -9,10 +10,13 @@ all:
 
 install:
 	@echo Creating $(DESTDIR)$(LIBDIR)/OSCAR/OCA/Sanity_Check
-	@mkdir -p $(DESTDIR)$(LIBDIR)/OSCAR/OCA/Sanity_Check
-	cp *.pm $(DESTDIR)$(LIBDIR)/OSCAR/OCA/Sanity_Check
+	install -d -m 0755 $(DESTDIR)$(LIBDIR)/OSCAR/OCA/Sanity_Check
+	install    -m 0755 ${FILES} $(DESTDIR)$(LIBDIR)/OSCAR/OCA/Sanity_Check
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
-	rm -rf $(DESTDIR)$(LIBDIR)/OSCAR/OCA/Sanity_Check/*.pm
+	cd $(DESTDIR)$(LIBDIR)/OSCAR/OCA/Sanity_Check/; rm -f ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
+
+clean:
+	rm -f *~
