--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -15,7 +15,7 @@ License: GPL
 URL: http://oscar.openclustergroup.org
 Group: Applications/System
 Source: %{name}-%{version}.tar.gz
-Requires: %{name}-libs
+Requires: %{name}-lib
 Requires: %{name}-scripts
 Requires: yum, createrepo, yume
 Vendor: OSCAR
@@ -89,7 +89,7 @@ Libraries for OSCAR clustering base package.
 %package scripts
 Group: Applications/System
 Summary: Libraries for OSCAR clustering package.
-Requires: %{name}-libs == %{version}-%{release}
+Requires: %{name}-lib == %{version}-%{release}
 AutoReqProv: no
 %description scripts
 Scripts for OSCAR clustering base package.
