[OSCARonDebian] We use now the new Makefile for scripts + cut a new set of packages for trunk.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7623 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4788ce571ca70fb1ab964288a4fd04c8493be462

--- a/debian/rules
+++ b/debian/rules
@@ -131,10 +131,9 @@ install: build
 	mv $(CURDIR)/scripts/system-sanity.d \
 		$(CURDIR)/debian/oscar-bin/usr/bin
 	# We make sure to clean everything up, it order to not deal with old stuff
-	cd  $(CURDIR)/scripts; perl Makefile.PL; make clean;
+	cd  $(CURDIR)/scripts; make clean;
 	# Then we install the binaries
-	cd  $(CURDIR)/scripts; perl Makefile.PL; \
-		make install DESTDIR=$(CURDIR)/debian/oscar-bin
+	cd  $(CURDIR)/scripts; make install DESTDIR=$(CURDIR)/debian/oscar-bin
 	# mv $(CURDIR)/install_cluster \
 	#	$(CURDIR)/debian/oscar-bin/usr/bin
 
