--- a/share/package_sets/Default/Makefile
+++ b/share/package_sets/Default/Makefile
@@ -4,7 +4,8 @@ SUBDIRS :=
 
 FILES := debian-4-i386.xml fc-6-x86_64.xml rhel-4-i386.xml suse-10-x86_64.xml \
 		debian-4-x86_64.xml fc-7-i386.xml rhel-4-x86_64.xml fc-5-i386.xml \
-		fc-7-x86_64.xml rhel-5-i386.xml fc-6-i386.xml rhel-5-x86_64.xml 
+		fc-7-x86_64.xml rhel-5-i386.xml fc-6-i386.xml rhel-5-x86_64.xml \
+		fc-10-x86_64.xml
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
