Update RPMs for oscar-base: the scripts package now includes the system-sanity.d directory.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7630 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e55d34f2595c097011faad10ffd993d71e9896bc

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -120,9 +120,12 @@ Scripts for OSCAR clustering base package.
 %files scripts
 %defattr(-,root,root)
 %dir %{bindir}
+%dir %{bindir}/system-sanity.d
 %{bindir}/*
 
 %changelog
+* Tue Dec 02 2008 Geoffroy Vallee <valleegr@ornl.gov>
+- Add the /usr/bin/system-sanity.d directory into the scripts RPM.
 * Wed Nov 26 2008 Geoffroy Vallee <valleegr@ornl.gov>
 - Modify the spec file to be based on the Makefile.
 - Install OSCAR directly into the system, instead of using /opt.
