Clean-up the management of system services (previous implementation led to bugs on RHEL-5.2).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7631 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2f3a2d84c5812ae216bcbe418046acaa612751fe

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -11,11 +11,12 @@ FILES := AddNode.pm Help.pm Prereqs.pm Bootstrap.pm ImageMgt.pm \
          CmpVersions.pm MAC.pm PackageBest.pm SISBuildSetup.pm Configbox.pm \
          PackageInUn.pm ConfigFile.pm PackagePath.pm SwitcherAPI.pm \
          ConfigManager.pm msm.pm SystemSanity.pm Package.pm Tk.pm \
-		 Configurator.pm Network.pm PackageSet.pm Utils.pm DelNode.pm \
+         Configurator.pm Network.pm PackageSet.pm Utils.pm DelNode.pm \
          NextIp.pm VersionParser.pm Distro.pm NodeConfigManager.pm \
          PackageSmart.pm VMConfigManager.pm Env.pm NodeMgt.pm \
          PartitionConfigManager.pm  WizardEnv.pm FileUtils.pm OCA.pm \
-         PartitionMgt.pm GUI_MAC.pm SystemInfo.pm
+         PartitionMgt.pm GUI_MAC.pm SystemInfo.pm SystemServices.pm \
+         SystemServicesDefs.pm
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
