--- a/testing/unit_testing/Makefile
+++ b/testing/unit_testing/Makefile
@@ -3,7 +3,8 @@ INSTALLDIR=/usr/share/oscar/testing/unit_testing
 
 SUBDIRS := etc samples
 SCRIPTS := test_config_file test_oscar_config test_systeminfo \
-		test_configxml test_prereqs test_distro_detection test_repo_prep
+		test_configxml test_prereqs test_distro_detection test_repo_prep \
+		test_network_utils
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
