Include a new function (and the associated test) to update the SystemConfigurator configuration file of a given image when needed.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7689 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b293431eb3734436b1a9222055ab1bbc62e01435

--- a/testing/unit_testing/samples/Makefile
+++ b/testing/unit_testing/samples/Makefile
@@ -2,7 +2,7 @@ DESTDIR=
 INSTALLDIR=/usr/share/oscar/testing/unit_testing/samples
 
 SUBDIRS := 
-FILES := config.xml
+FILES := config.xml systemconfig.conf.tmpl
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
