Update the spec file for oscar-base to reflect the latest modifications to the main OSCAR Makefile.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7702 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 848498956ee6a58e6e64ed29cbde0ac311842374

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -44,7 +44,7 @@ those packages from an online package repository, either on or off site.
 
 %build
 rm -rf %{buildroot}
-make system-install DESTDIR=%{buildroot}
+make install DESTDIR=%{buildroot}
 mkdir -p %{buildroot}%{etcdir}
 mkdir -p %{buildroot}%{docdir}
 mkdir -p %{buildroot}%{sharedir}/images
