Update the template for oscar.conf so by default we assume OSCAR is installed directly on the system (no OSCAR_HOME).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7719 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 43db934d33511ac7075f4d00c3df0ce1fce91681

--- a/share/etc/templates/oscar.conf
+++ b/share/etc/templates/oscar.conf
@@ -23,16 +23,16 @@ PREREQ_MODE = check_and_fix
 ################################################################################
 
 # Specify where the OSCAR scripts are
-OSCAR_SCRIPTS_PATH = scripts
+OSCAR_SCRIPTS_PATH = /usr/bin
 
 # Specify where the prereqs are
-PREREQS_PATH = share/prereqs
+PREREQS_PATH = /usr/share/oscar/prereqs
 
 # Specify where rapt is
-RAPT_PATH = packages/rapt
+RAPT_PATH = /usr/share/oscar/prereqs/rapt
 
 # Specify where yume is
-YUME_PATH = packages/yume
+YUME_PATH = /usr/share/oscar/prereqs/yume
 
 # Specify where OSCAR packages are located. This is only used by developers
 OPKGS_PATH = packages
